# agentic-ai-practise

./: .env  README.md  pyproject.toml
src/agentic_ai_practise/: __init__.py  dynamic_instructions.py  handoffs.py  hooks.py  input_guardrails.py  main.py  multi_agent_system.py  openai_api_key.py  output_guardrails.py  run_result.py  streaming.py  turns.py
